--- a/FEproblem1/src/index.html
+++ b/FEproblem1/src/index.html
@@ -19,10 +19,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body class="mat-typography mat-background">
+<body class="mat-typography">
   <app-root>
   <!--	<h1>Welcome King Shan</h1>-->
   </app-root>
-  <app-app-footer></app-app-footer>
+  
 </body>
 </html>
